more logic changes
